[project]
name = "langchain_retriever_example"
version = "0.1.0"
description = ""
authors = [
    {name = "HassanRajpoot",email = "xhah450@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pinecone (>=6.0.2,<7.0.0)",
    "langchain-pinecone (>=0.2.6,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "chroma (>=0.2.0,<0.3.0)",
    "chromadb (>=1.0.12,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
